[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -109,6 +109,7 @@
     "Manage Files": "Dateien verwalten",
     "Manage Posts": "Beiträge verwalten",
     "Manage Tags": "Tags verwalten",
+    "Manage your profile and account settings": "Verwalte dein Profil und deine Konto-Einstellungen",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
