--- a/lang/en.json
+++ b/lang/en.json
@@ -109,6 +109,7 @@
     "Manage Files": "Manage Files",
     "Manage Posts": "Manage Posts",
     "Manage Tags": "Manage Tags",
+    "Manage your profile and account settings": "Manage your profile and account settings",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
