--- a/lang/pl.json
+++ b/lang/pl.json
@@ -109,6 +109,7 @@
     "Manage Files": "Zarządzaj plikami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
+    "Manage your profile and account settings": "Zarządzaj swoim profilem i ustawieniami konta",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Imię",
