[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -17,6 +17,7 @@
     "Are you sure you want to delete this comment? This action cannot be undone.": "Bist du sicher, dass du diesen Kommentar löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden.",
     "Are you sure you want to delete your account?": "Bist du sicher, dass du dein Konto löschen möchtest?",
     "Are you sure?": "Bist du sicher?",
+    "Back to Homepage": "Zurück zur Startseite",
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
     "Back to all posts": "Zurück zu allen Beiträgen",
@@ -44,6 +45,7 @@
     "Comments": "Kommentare",
     "Confirm password": "Passwort bestätigen",
     "Confirm subscription": "Abonnement bestätigen",
+    "Confirmed": "Bestätigt",
     "Contact": "Kontakt",
     "Contact Me": "Kontaktieren Sie mich",
     "Content": "Inhalt",
@@ -64,11 +66,15 @@
     "Delete your account and all of its resources": "Lösche dein Konto und alle seine Ressourcen",
     "Deleting...": "Löschen...",
     "Design Patterns": "Entwurfsmuster",
+    "Deutsch": "Deutsch",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Datei herunterladen",
     "E-mail": "E-Mail",
+    "Edit Tag": "Tag bearbeiten",
+    "Edit User": "Benutzer bearbeiten",
+    "Email": "E-Mail",
     "Email address": "E-Mail-Adresse",
     "Email verification": "E-Mail-Verifizierung",
     "English": "Englisch",
@@ -90,6 +96,7 @@
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Ich bin ein begeisterter PHP-Entwickler mit 3 Jahren Berufserfahrung in Laravel und Symfony-Frameworks. Ich spezialisiere mich auf das Entwickeln robuster Webanwendungen und die Umsetzung von DevOps-Praktiken. Ich habe außerdem umfassende Erfahrung in moderner JavaScript-Entwicklung mit React und Vue.js, um responsive und interaktive Benutzeroberflächen zu erstellen.",
+    "ID": "ID",
     "IP Address": "IP-Adresse",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "Wenn Sie diese E-Mail nicht erwartet haben, können Sie sie ignorieren.",
@@ -103,12 +110,15 @@
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Mehr über Dominik Jasiński - PHP-Entwickler & DevOps-Ingenieur mit Expertise in Laravel, Symfony, React und modernen Entwicklungspraktiken",
     "Leave a comment": "Kommentar hinterlassen",
     "Light": "Hell",
+    "Locale": "Sprache",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
     "Manage Files": "Dateien verwalten",
     "Manage Posts": "Beiträge verwalten",
+    "Manage Subscribers": "Abonnenten verwalten",
     "Manage Tags": "Tags verwalten",
+    "Manage Users": "Benutzer verwalten",
     "Manage your profile and account settings": "Verwalte dein Profil und deine Konto-Einstellungen",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
@@ -121,21 +131,26 @@
     "Next": "Nächster",
     "Next comments page": "Nächste Kommentarsseite",
     "Next page": "Nächste Seite",
+    "No": "Nein",
     "No posts found": "Keine Beiträge gefunden",
+    "No subscribers found": "Keine Abonnenten gefunden",
     "No tags found": "Keine Tags gefunden",
     "No users found": "Keine Benutzer gefunden",
+    "No visit data available": "Keine Besuchdaten verfügbar",
     "No visits found": "Keine Besuche gefunden",
     "Oldest": "Älteste",
     "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Wenn dein Konto gelöscht wird, werden alle seine Ressourcen und Daten ebenfalls dauerhaft gelöscht. Bitte gib dein Passwort ein, um zu bestätigen, dass du dein Konto dauerhaft löschen möchtest.",
+    "Oops! The page you are looking for does not exist or has been moved.": "Oops! Die Seite, die du suchst, existiert nicht oder wurde verschoben.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP & DevOps",
-    "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP-Entwickler & DevOps-Ingenieur",
     "PHP Frameworks": "PHP-Frameworks",
     "Page": "Seite",
+    "Page Not Found": "Seite nicht gefunden",
     "Panel": "Panel",
     "Password": "Passwort",
+    "Password (leave blank to keep current)": "Passwort (leer lassen, um das aktuelle zu behalten)",
     "Performance Optimization": "Leistungsoptimierung",
     "Pick a date": "Datum auswählen",
     "Please proceed with caution, this cannot be undone.": "Bitte gehen Sie mit Vorsicht vor, dies kann nicht rückgängig gemacht werden.",
@@ -143,6 +158,7 @@
     "Polish": "Polnisch",
     "Post": "Beitrag",
     "Post Visits": "Beitragsbesuche",
+    "Post Visits last 30 days": "Beitragsbesuche in den letzten 30 Tagen",
     "Post created successfully": "Beitrag erfolgreich erstellt",
     "Post deleted successfully": "Beitrag erfolgreich gelöscht",
     "Post updated successfully": "Beitrag erfolgreich aktualisiert",
@@ -163,6 +179,7 @@
     "Redis": "Redis",
     "Resend verification email": "Verifizierungs-E-Mail erneut senden",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI\/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
+    "Role": "Rolle",
     "Save": "Speichern",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
@@ -183,6 +200,7 @@
     "Stay Updated": "Bleiben Sie auf dem Laufenden",
     "Submit Comment": "Kommentar senden",
     "Subscribe": "Abonnieren",
+    "Subscribers": "Abonnenten",
     "System": "System",
     "Tag created successfully": "Tag erfolgreich erstellt",
     "Tag deleted successfully": "Tag erfolgreich gelöscht",
@@ -215,6 +233,8 @@
     "Unsubscribe": "Abmelden",
     "Unsubscribed from newsletter": "Abbestellung des Newsletters",
     "Update Post": "Beitrag aktualisieren",
+    "Update Tag": "Tag aktualisieren",
+    "Update User": "Benutzer aktualisieren",
     "Update password": "Passwort aktualisieren",
     "Update your account's appearance settings": "Aktualisieren Sie die Einstellungen für Ihr Konto",
     "Update your name and email address": "Aktualisieren Sie Ihren Namen und Ihre E-Mail-Adresse",
