--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,7 @@
     "Are you sure you want to delete this comment? This action cannot be undone.": "Are you sure you want to delete this comment? This action cannot be undone.",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure?": "Are you sure?",
+    "Back to Homepage": "Back to Homepage",
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
     "Back to all posts": "Back to all posts",
@@ -44,6 +45,7 @@
     "Comments": "Comments",
     "Confirm password": "Confirm password",
     "Confirm subscription": "Confirm subscription",
+    "Confirmed": "Confirmed",
     "Contact": "Contact",
     "Contact Me": "Contact Me",
     "Content": "Content",
@@ -64,11 +66,15 @@
     "Delete your account and all of its resources": "Delete your account and all of its resources",
     "Deleting...": "Deleting...",
     "Design Patterns": "Design Patterns",
+    "Deutsch": "Deutsch",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Download File",
     "E-mail": "E-mail",
+    "Edit Tag": "Edit Tag",
+    "Edit User": "Edit User",
+    "Email": "Email",
     "Email address": "Email address",
     "Email verification": "Email verification",
     "English": "English",
@@ -90,6 +96,7 @@
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.",
+    "ID": "ID",
     "IP Address": "IP Address",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "If you did not request this email, you can safely ignore it.",
@@ -103,12 +110,15 @@
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.",
     "Leave a comment": "Leave a comment",
     "Light": "Light",
+    "Locale": "Locale",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
     "Manage Files": "Manage Files",
     "Manage Posts": "Manage Posts",
+    "Manage Subscribers": "Manage Subscribers",
     "Manage Tags": "Manage Tags",
+    "Manage Users": "Manage Users",
     "Manage your profile and account settings": "Manage your profile and account settings",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
@@ -121,21 +131,26 @@
     "Next": "Next",
     "Next comments page": "Next comments page",
     "Next page": "Next page",
+    "No": "No",
     "No posts found": "No posts found",
+    "No subscribers found": "No subscribers found",
     "No tags found": "No tags found",
     "No users found": "No users found",
+    "No visit data available": "No visit data available",
     "No visits found": "No visits found",
     "Oldest": "Oldest",
     "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
+    "Oops! The page you are looking for does not exist or has been moved.": "Oops! The page you are looking for does not exist or has been moved.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP & DevOps",
-    "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP Developer & DevOps Engineer",
     "PHP Frameworks": "PHP Frameworks",
     "Page": "Page",
+    "Page Not Found": "Page Not Found",
     "Panel": "Panel",
     "Password": "Password",
+    "Password (leave blank to keep current)": "Password (leave blank to keep current)",
     "Performance Optimization": "Performance Optimization",
     "Pick a date": "Pick a date",
     "Please proceed with caution, this cannot be undone.": "Please proceed with caution, this cannot be undone.",
@@ -143,6 +158,7 @@
     "Polish": "Polish",
     "Post": "Post",
     "Post Visits": "Post Visits",
+    "Post Visits last 30 days": "Post Visits last 30 days",
     "Post created successfully": "Post created successfully",
     "Post deleted successfully": "Post deleted successfully",
     "Post updated successfully": "Post updated successfully",
@@ -163,6 +179,7 @@
     "Redis": "Redis",
     "Resend verification email": "Resend verification email",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.",
+    "Role": "Role",
     "Save": "Save",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
@@ -183,6 +200,7 @@
     "Stay Updated": "Stay Updated",
     "Submit Comment": "Submit Comment",
     "Subscribe": "Subscribe",
+    "Subscribers": "Subscribers",
     "System": "System",
     "Tag created successfully": "Tag created successfully",
     "Tag deleted successfully": "Tag deleted successfully",
@@ -215,6 +233,8 @@
     "Unsubscribe": "Unsubscribe",
     "Unsubscribed from newsletter": "Unsubscribed from newsletter",
     "Update Post": "Update Post",
+    "Update Tag": "Update Tag",
+    "Update User": "Update User",
     "Update password": "Update password",
     "Update your account's appearance settings": "Update your account's appearance settings",
     "Update your name and email address": "Update your name and email address",
