--- a/lang/pl.json
+++ b/lang/pl.json
@@ -17,6 +17,7 @@
     "Are you sure you want to delete this comment? This action cannot be undone.": "Czy jesteś pewny, że chcesz usunąć ten komentarz? Ta akcja nie może zostać cofnięta.",
     "Are you sure you want to delete your account?": "Czy jesteś pewny, że chcesz usunąć swoje konto?",
     "Are you sure?": "Jesteś pewien?",
+    "Back to Homepage": "Wróć do strony głównej",
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
     "Back to all posts": "Wróć do wszystkich postów",
@@ -44,6 +45,7 @@
     "Comments": "Komentarze",
     "Confirm password": "Potwierdź hasło",
     "Confirm subscription": "Potwierdź subskrypcję",
+    "Confirmed": "Potwierdzono",
     "Contact": "Kontakt",
     "Contact Me": "Skontaktuj się ze mną",
     "Content": "Treść",
@@ -64,11 +66,15 @@
     "Delete your account and all of its resources": "Usuń swoje konto i wszystkie jego zasoby",
     "Deleting...": "Usuwanie...",
     "Design Patterns": "Wzorce projektowe",
+    "Deutsch": "Niemiecki",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Pobierz plik",
     "E-mail": "E-mail",
+    "Edit Tag": "Edytuj tag",
+    "Edit User": "Edytuj użytkownika",
+    "Email": "Email",
     "Email address": "Adres email",
     "Email verification": "Weryfikacja email",
     "English": "Angielski",
@@ -90,6 +96,7 @@
     "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Jestem pasjonującym programistą PHP z 3-letnim doświadczeniem w frameworkach Laravel i Symfony. Specjalizuję się w budowaniu niezawodnych aplikacji internetowych i implementacji praktyk DevOps. Mam również bogate doświadczenie w nowoczesnym programowaniu JavaScript, pracując z React i Vue.js do tworzenia responsywnych i interaktywnych interfejsów użytkownika.",
+    "ID": "ID",
     "IP Address": "Adres IP",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "Jeśli nie spodziewałeś się tego maila, możesz go zignorować.",
@@ -103,12 +110,15 @@
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Dowiedz się więcej o Dominiku Jasińskim - programiście PHP i inżynierze DevOps z doświadczeniem w frameworkach Laravel, Symfony, React i nowoczesnych praktykach programistycznych",
     "Leave a comment": "Zostaw komentarz",
     "Light": "Jasny",
+    "Locale": "Język",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
     "Manage Files": "Zarządzaj plikami",
     "Manage Posts": "Zarządzaj postami",
+    "Manage Subscribers": "Zarządzaj subskrybentami",
     "Manage Tags": "Zarządzaj tagami",
+    "Manage Users": "Zarządzaj użytkownikami",
     "Manage your profile and account settings": "Zarządzaj swoim profilem i ustawieniami konta",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
@@ -121,21 +131,26 @@
     "Next": "Następna",
     "Next comments page": "Następna strona komentarzy",
     "Next page": "Następna strona",
+    "No": "Nie",
     "No posts found": "Nie znaleziono żadnych postów",
+    "No subscribers found": "Nie znaleziono subskrybentów",
     "No tags found": "Nie znaleziono tagów",
     "No users found": "Nie znaleziono użytkowników",
+    "No visit data available": "Brak danych o odwiedzinach",
     "No visits found": "Nie znaleziono odwiedzin",
     "Oldest": "Najstarsze",
     "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Po usunięciu Twojego konta, wszystkie jego zasoby i dane zostaną trwale usunięte. Proszę wprowadzić swoje hasło, aby potwierdzić, że chcesz trwale usunąć swoje konto.",
+    "Oops! The page you are looking for does not exist or has been moved.": "Oops! Strona, której szukasz, nie istnieje lub została przeniesiona.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP i DevOps",
-    "PHP & DevOps Blog": "Blog PHP i DevOps",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "Programista PHP i inżynier DevOps",
     "PHP Frameworks": "Frameworki PHP",
     "Page": "Strona",
+    "Page Not Found": "Strona nie znaleziona",
     "Panel": "Panel",
     "Password": "Hasło",
+    "Password (leave blank to keep current)": "Hasło (zostaw puste, aby zachować aktualne)",
     "Performance Optimization": "Optymalizacja wydajności",
     "Pick a date": "Wybierz datę",
     "Please proceed with caution, this cannot be undone.": "Proszę postępować z ostrożnością, ta operacja nie może zostać cofnięta.",
@@ -143,6 +158,7 @@
     "Polish": "Polski",
     "Post": "Post",
     "Post Visits": "Odwiedziny postu",
+    "Post Visits last 30 days": "Odwiedziny postu w ciągu ostatnich 30 dni",
     "Post created successfully": "Post został pomyślnie utworzony",
     "Post deleted successfully": "Post został pomyślnie usunięty",
     "Post updated successfully": "Post został pomyślnie zaktualizowany",
@@ -163,6 +179,7 @@
     "Redis": "Redis",
     "Resend verification email": "Wyślij ponownie email weryfikacyjny",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI\/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
+    "Role": "Rola",
     "Save": "Zapisz",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
@@ -183,6 +200,7 @@
     "Stay Updated": "Bądź na bieżąco",
     "Submit Comment": "Wyślij komentarz",
     "Subscribe": "Subskrybuj",
+    "Subscribers": "Subskrybenci",
     "System": "System",
     "Tag created successfully": "Tag został pomyślnie utworzony",
     "Tag deleted successfully": "Tag został pomyślnie usunięty",
@@ -215,6 +233,8 @@
     "Unsubscribe": "Zrezygnuj z subskrypcji",
     "Unsubscribed from newsletter": "Zrezygnowałeś z newslettera",
     "Update Post": "Aktualizuj post",
+    "Update Tag": "Aktualizuj tag",
+    "Update User": "Aktualizuj użytkownika",
     "Update password": "Aktualizuj hasło",
     "Update your account's appearance settings": "Aktualizuj ustawienia wyglądu Twojego konta",
     "Update your name and email address": "Aktualizuj swoje imię i adres email",
